# thrushc

./: .gitignore  CITATION.cff  COMMANDS.md  COMMIT_CONVENTIONS.md  Cargo.toml  LICENSE.txt  PROJECT_STRUCTURE.md  README.md  build-release.bat  build-release.fish  build-release.sh  build.py  build.rs  clippy.toml  license_updater.py  rust-toolchain.toml  rustc-speedup.bat  rustc-speedup.fish  test
.cargo/: config.toml
.github/: FUNDING.yml
analysis/: panic-audit.md
build-scripts/: build.fish
builder/: Cargo.toml  README.md
builder/src/: main.rs
compiler-builder/: Cargo.toml
examples/: README.md  raylib.thrush  vector.thrush
fundamentals/: README.md  attributes.th
fuzz/: .gitignore  Cargo.toml  thrust.dict
fuzz/fuzz_targets/: lexer.rs  pipeline.rs
scripts/: build-release.sh  build.bat  build.fish  build.ps1  install-cross.bat  install-cross.fish  install-cross.ps1  install-cross.sh  license_updater.py  setup.bat  setup.fish
src/: README.md  cli.rs  constants.rs  diagnostic.rs  error.rs  logging.rs  main.rs
thrushc_analyzer/: Cargo.toml
thrushc_analyzer/src/: expressions.rs  lib.rs
thrushc_ast/: Cargo.toml
thrushc_ast/src/: builitins.rs  data.rs  getters.rs  impls.rs  lib.rs  metadata.rs  traits.rs  types.rs
thrushc_ast_verifier/: Cargo.toml
thrushc_attribute_checker/: Cargo.toml
thrushc_attribute_checker/src/: applicant.rs  lib.rs
thrushc_attributes/: Cargo.toml
thrushc_attributes/src/: callconventions.rs  lib.rs  linkage.rs  traits.rs
thrushc_compiler/: Cargo.toml
thrushc_compiler/src/: interrupt.rs  lib.rs  linkage.rs  starter.rs  validate.rs
thrushc_compiler/src/emitters/: assembler.rs  llvmbitcode.rs  llvmir.rs
thrushc_compiler/src/printers/: assembler.rs  llvmir.rs
thrushc_compiler_cli/: Cargo.toml
thrushc_compiler_cli/src/: cli.rs  console.rs  help.rs  main.rs
thrushc_constants/: Cargo.toml
thrushc_core/: Cargo.toml
thrushc_diagnostician/: Cargo.toml
thrushc_diagnostician/src/: diagnostic.rs  errors.rs  impls.rs  lib.rs  position.rs  printers.rs  traits.rs
thrushc_entities/: Cargo.toml
thrushc_entities/src/: analyzer.rs  lib.rs  linter.rs  parser.rs  typechecker.rs
thrushc_entrypoint/: Cargo.toml
thrushc_entrypoint/src/: cli.rs  help.rs  main.rs
thrushc_errors/: Cargo.toml
thrushc_errors/src/: lib.rs
thrushc_frontend_abort/: Cargo.toml
thrushc_frontend_abort/src/: lib.rs
thrushc_heap_allocator/: Cargo.toml
thrushc_heap_allocator/src/: lib.rs
thrushc_lexer/: Cargo.toml
thrushc_lexer/src/: character.rs  identifier.rs  lex.rs  lib.rs  number.rs  printer.rs  string.rs
thrushc_linter/: Cargo.toml
thrushc_llvm_attributes/: Cargo.toml
thrushc_llvm_attributes/src/: impls.rs  lib.rs  traits.rs
thrushc_llvm_builtins/: Cargo.toml
thrushc_llvm_builtins/src/: lib.rs
thrushc_llvm_callconventions/: Cargo.toml
thrushc_llvm_callconventions_checker/: Cargo.toml
thrushc_llvm_callconventions_checker/src/: lib.rs
thrushc_llvm_codegen/: Cargo.toml
thrushc_llvm_codegen/src/: abort.rs  anchor.rs  atomic.rs  attrbuilder.rs  block.rs  brancher.rs  builtins.rs  cast.rs  codegen.rs  context.rs  cstring.rs  debug.rs  impls.rs  integer.rs  jit.rs  lib.rs  memheap.rs  memory.rs  memstack.rs  memstatic.rs  metadata.rs  obfuscation.rs  optimizer.rs  predicates.rs  table.rs  traits.rs  typegeneration.rs  types.rs  utils.rs
thrushc_llvm_codegen/src/expressions/: array.rs  call.rs  cstring.rs  farray.rs  floatingpoint.rs  index.rs  indirectcall.rs  inlineasm.rs  mod.rs  property.rs  structure.rs  unaryop.rs
thrushc_llvm_codegen/src/expressions/binaryop/: boolean.rs  float.rs  integer.rs
thrushc_llvm_codegen/src/globals/: asmfunction.rs  function.rs  intrinsic.rs
thrushc_llvm_codegen/src/statements/: conditional.rs  forloop.rs  infloop.rs  mod.rs  whileloop.rs
thrushc_llvm_intrinsic_checker/: Cargo.toml
thrushc_llvm_intrinsic_checker/src/: lib.rs
thrushc_logging/: Cargo.toml
thrushc_mir/: Cargo.toml
thrushc_modificators/: Cargo.toml
thrushc_modificators/src/: impls.rs  lib.rs  traits.rs
thrushc_options/: Cargo.toml
thrushc_options/src/: lib.rs
thrushc_options/src/backends/llvm/: cpu.rs  info.rs  jit.rs  mod.rs  passes.rs  target.rs
thrushc_parser/: Cargo.toml
thrushc_parser/src/: attributes.rs  builder.rs  builtins.rs  context.rs  control.rs  entities.rs  expected.rs  impls.rs  lib.rs  modificators.rs  reinterpret.rs  sync.rs  table.rs  traits.rs  typegen.rs
thrushc_parser/src/declarations/: asmfn.rs  embedded.rs  function.rs  glasm.rs  glconstant.rs  glcstype.rs  glenum.rs  glstatic.rs  glstructure.rs  import.rs  import_c.rs  intrinsic.rs  mod.rs
thrushc_parser/src/expressions/: array.rs  asm.rs  call.rs  constructor.rs  deref.rs  enumv.rs  farray.rs  index.rs  indirect.rs  mod.rs  property.rs  reference.rs
thrushc_parser/src/expressions/precedences/: and.rs  cast.rs  cmp.rs  equality.rs  factor.rs  index.rs  indirect.rs  lower.rs  mutation.rs  or.rs  property.rs  term.rs  unary.rs
thrushc_parser/src/statements/: block.rs  conditional.rs  controlflow.rs  defer.rs  lconstant.rs  lctype.rs  lenum.rs  local.rs  loops.rs  lstatic.rs  lstructure.rs  mod.rs  terminator.rs
thrushc_preprocessor/: Cargo.toml
thrushc_preprocessor/src/: context.rs  lib.rs  module.rs  moduletable.rs  parser.rs  signatures.rs  table.rs
thrushc_preprocessor/src/modparsing/: attributes.rs  constant.rs  customtype.rs  expression.rs  import.rs  reinterpret.rs  typegen.rs
thrushc_preprocessor/src/preparsing/: import.rs
thrushc_preprocessor_type_resolver/: Cargo.toml
thrushc_reader/: Cargo.toml
thrushc_scoper/: Cargo.toml
thrushc_scoper/src/: checks.rs  context.rs  lib.rs
thrushc_semantic/: Cargo.toml
thrushc_semantic/src/: lib.rs
thrushc_span/: Cargo.toml
thrushc_token/: Cargo.toml
thrushc_token/src/: impls.rs  lib.rs  tokentype.rs  traits.rs
thrushc_token_type/: Cargo.toml
thrushc_token_type/src/: impls.rs  lib.rs
thrushc_typechecker/: Cargo.toml
thrushc_typesystem/: Cargo.toml
thrushc_utils/: Cargo.toml
thrustc/: Cargo.toml
thrustc_analyzer/: Cargo.toml
(+2023 files in other folders)
