[package]
name = "thrushc"
description = "The Compiler for Thrush Programming Language."
edition = "2024"
license = "GPL-3.0"
version = "0.1.0"
rust-version = "1.85.0"

authors = [
    "Thrush Team <thrushlangproject@gmail.com>",
    "Stevens Benavides <foss.stevens.benavides@gmail.com>"
]

homepage = "https://github.com/thrushlang/thrushc"
repository = "https://github.com/thrushlang/thrushc"
build = "build.rs"

[dependencies]
inkwell = { path = "wrappers/llvm/inkwell", optional = true }
gcc = { path = "wrappers/gcc/gccjit",  optional = true }
clang = { path = "wrappers/llvm/clang", optional = true }

unicode_categories = "0.1.1"
colored = "3.0.0"
ahash = "0.8.11"
lazy_static = "1.5.0"
fastrand = "2.3.0"
libloading = "0.8.9"
either = "1.15.0"
uuid = { version = "1.19.0", features = ["v4"] }
object = { version = "0.38.0", features = ["read"] }
tar = "0.4.44"
xz2 = "0.1.7"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "2.3.0"

[features]
default = ["llvm_backend_static"]

llvm_backend_dynamic = ["inkwell/llvm17-0", "inkwell/llvm17-0-force-dynamic"]
llvm_backend_static = ["inkwell/llvm17-0", "inkwell/llvm17-0-force-static"]

gcc_backend_dynamic = ["gcc"]

cbindgen_static = ["clang/static"]
cbindgen_dynamic = ["clang"]

[build-dependencies]
libloading = "0.8.9"

[profile.dev]
incremental = true

[profile.release]
incremental = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = "abort"
debug = false
strip = true
