[workspace]
members = [
    "thrushc_compiler",
    "thrushc_compiler_cli",
    "thrushc_ast",
    "thrushc_lexer",
    "thrushc_parser",
    "thrushc_typesystem", 
    "thrushc_span", 
    "thrushc_diagnostician", 
    "thrushc_errors", 
    "thrushc_logging",
    "thrushc_options",
    "thrushc_mir", 
    "thrushc_token", 
    "thrushc_attributes", 
    "thrushc_typechecker", 
    "thrushc_scoper", 
    "thrushc_analyzer", 
    "thrushc_linter", 
    "thrushc_constants", 
    "thrushc_reader", 
    "thrushc_frontend_abort", 
    "thrushc_semantic", 
    "thrushc_entities", 
    "thrushc_preprocessor",
    "thrushc_llvm_codegen", 
    "thrushc_llvm_attributes", 
    "thrushc_llvm_callconventions", 
    "thrushc_llvm_builtins", 
    "thrushc_attribute_checker", 
    "thrushc_llvm_intrinsic_checker", 
    "thrushc_llvm_callconventions_checker", 
    "thrushc_modificators", 
    "thrushc_token_type", 
    "thrushc_preprocessor_type_resolver", 
]

exclude = [
    "fuzz"  
]

resolver = "2"

[workspace.package]
name = "thrushc"
description = "The compiler for Thrush Programming Language."
edition = "2024"
license = "GPL-3.0"
version = "0.1.0"
rust-version = "1.85.0"

authors = [
    "Thrush Team <thrushlangproject@gmail.com>",
    "Stevens Benavides <foss.stevens.benavides@gmail.com>"
]

homepage = "https://github.com/thrushlang/thrushc"
repository = "https://github.com/thrushlang/thrushc"

[patch.crates-io]
clang-sys = { path = "crates/llvm/17/clang-sys" }
llvm-sys = { path = "crates/llvm/17/llvm-sys" }

[workspace.dependencies]
inkwell = { path = "crates/llvm/inkwell" }
clang = { path = "crates/llvm/clang" }

[profile.dev]
incremental = true

[profile.dev.package."*"]
incremental = true
opt-level = 2

[profile.release]
incremental = true
opt-level = 'z'
codegen-units = 1
lto = false
panic = "abort"
debug = false
