[workspace]
members = [
    "thrustc_entrypoint",
    "thrustc_core",
    "thrustc_ast",
    "thrustc_lexer",
    "thrustc_parser",
    "thrustc_typesystem", 
    "thrustc_span", 
    "thrustc_diagnostician", 
    "thrustc_errors", 
    "thrustc_logging",
    "thrustc_options",
    "thrustc_mir", 
    "thrustc_token", 
    "thrustc_attributes", 
    "thrustc_typechecker", 
    "thrustc_scoper", 
    "thrustc_analyzer", 
    "thrustc_linter", 
    "thrustc_constants", 
    "thrustc_reader", 
    "thrustc_frontend_abort", 
    "thrustc_semantic", 
    "thrustc_entities", 
    "thrustc_preprocessor",
    "thrustc_llvm_codegen", 
    "thrustc_llvm_attributes", 
    "thrustc_llvm_callconventions", 
    "thrustc_llvm_builtins", 
    "thrustc_attribute_checker", 
    "thrustc_llvm_intrinsic_checker", 
    "thrustc_llvm_callconventions_checker", 
    "thrustc_modificators", 
    "thrustc_token_type", 
    "thrustc_preprocessor_type_resolver", 
    "thrustc_ast_verifier", 
    "thrustc_heap_allocator", 
    "thrustc_utils", 
]

exclude = [
    "fuzz"  
]

resolver = "2"

[workspace.package]
name = "thrustc"
description = "The compiler for Thrust Programming Language."
edition = "2024"
license = "GPL-3.0"
version = "0.1.0"
rust-version = "1.85.0"

authors = [
    "Thrust Team <thrustlangproject@gmail.com>",
    "Stevens Benavides <foss.stevens.benavides@gmail.com>"
]

homepage = "https://github.com/thrustlang/thrustc"
repository = "https://github.com/thrustlang/thrustc"

[patch.crates-io]
clang-sys = { path = "crates/llvm/17/clang-sys" }
llvm-sys = { path = "crates/llvm/17/llvm-sys" }

[workspace.dependencies]
inkwell = { path = "crates/llvm/inkwell" }
clang = { path = "crates/llvm/clang" }

[profile.dev]
incremental = true

[profile.dev.package."*"]
incremental = true
opt-level = 2

[profile.release]
incremental = true
opt-level = 'z'
codegen-units = 1
lto = false
panic = "abort"
debug = false
