[package]
name = "builder"
description = "The compiler builder for Thrush Programming Language."
license = "GPL-3.0"
version = "1.0.0"
edition = "2024"
authors = ["Kevin Benavides <https://github.com/DevCheckOG>"]
readme = "README.md"

[dependencies]
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
serde_json =  "1.0.140"
colored = "3.0.0"