[package]
name = "thrustc_compiler_fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
chrono = "0.4.44"

arbitrary = { version = "1.4.2", features = ["derive"] }

thrustc_lexer = { path = "../thrustc_lexer" }
thrustc_options = { path = "../thrustc_options" }
thrustc_ast = { path = "../thrustc_ast" , features = ["fuzz"] }
thrustc_semantic = { path = "../thrustc_semantic" }

[[bin]]
name = "lexer-fuzz"
path = "fuzz_targets/lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pipeline"
path = "fuzz_targets/pipeline.rs"
test = false
doc = false
bench = false
