[package]
name = "thrushc_analyzer"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
thrushc_errors = { path = "../thrushc_errors" }
thrushc_ast = { path = "../thrushc_ast" }
thrushc_options = { path = "../thrushc_options" }
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_logging = { path = "../thrushc_logging" }
thrushc_attributes = { path = "../thrushc_attributes" }
thrushc_span = { path = "../thrushc_span" }
thrushc_typesystem = { path = "../thrushc_typesystem" }