[package]
name = "thrushc_ast"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
thrushc_span = { path = "../thrushc_span" }
thrushc_typesystem = { path = "../thrushc_typesystem" }
thrushc_attributes = { path = "../thrushc_attributes" }
thrushc_mir = { path = "../thrushc_mir" }
thrushc_token = { path = "../thrushc_token" }
thrushc_errors = { path = "../thrushc_errors" }