[package]
name = "thrushc_attribute_checker"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ahash = "0.8.11"

thrushc_errors = { path = "../thrushc_errors" }
thrushc_ast = { path = "../thrushc_ast" }
thrushc_span = { path = "../thrushc_span" }
thrushc_token = { path = "../thrushc_token" }
thrushc_typesystem = { path = "../thrushc_typesystem" }
thrushc_attributes = { path = "../thrushc_attributes" }
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_logging = { path = "../thrushc_logging" }
thrushc_options = { path = "../thrushc_options" }