[package]
name = "thrushc_compiler"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
fastrand = "2.3.0"
either = "1.15.0"
colored = "3.0.0"

inkwell = { workspace = true, optional = true }
clang = { workspace = true, optional = true }

thrushc_preprocessor = { path = "../thrushc_preprocessor" }
thrushc_llvm_callconventions_checker = { path = "../thrushc_llvm_callconventions_checker" }
thrushc_llvm_intrinsic_checker = { path = "../thrushc_llvm_intrinsic_checker" }
thrushc_constants = { path = "../thrushc_constants" }
thrushc_token = { path = "../thrushc_token" }
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_lexer = { path = "../thrushc_lexer" }
thrushc_parser = { path = "../thrushc_parser" }
thrushc_ast = { path = "../thrushc_ast" }
thrushc_options = { path = "../thrushc_options" }
thrushc_semantic = { path = "../thrushc_semantic" }
thrushc_llvm_codegen = { path = "../thrushc_llvm_codegen" }
thrushc_logging = { path = "../thrushc_logging" }

[features]
default = ["llvm_backend_static", "cbindgen_static"]

llvm_backend_dynamic = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-dynamic"]
llvm_backend_static  = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-static"]

cbindgen_static      = ["dep:clang", "clang/static"]
cbindgen_dynamic     = ["dep:clang"]
