[package]
name = "thrushc_compiler_cli"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ahash = "0.8.11"
colored = "3.0.0"

inkwell = { workspace = true, optional = true }
clang = { workspace = true, optional = true }

thrushc_compiler = { path = "../thrushc_compiler"  }
thrushc_options = { path = "../thrushc_options" }
thrushc_logging = { path = "../thrushc_logging"}
thrushc_parser = { path = "../thrushc_parser"}
thrushc_lexer = { path = "../thrushc_lexer" }
thrushc_ast = { path = "../thrushc_ast"}
thrushc_diagnostician = { path = "../thrushc_diagnostician"}
thrushc_typesystem = { path = "../thrushc_typesystem"}
thrushc_span = { path = "../thrushc_span" }
thrushc_errors = { path = "../thrushc_errors" }
thrushc_reader = { path = "../thrushc_reader" }
thrushc_constants = { path = "../thrushc_constants" }

[features]
default = ["llvm_backend_static", "cbindgen_static"]

llvm_backend_dynamic = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-dynamic"]
llvm_backend_static  = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-static"]

cbindgen_static      = ["dep:clang", "clang/static"]
cbindgen_dynamic     = ["dep:clang"]
