[package]
name = "thrushc_diagnostician" 
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
colored = "3.0.0"

thrushc_options = { path = "../thrushc_options" }
thrushc_logging = { path = "../thrushc_logging" }
thrushc_errors = { path = "../thrushc_errors" }
thrushc_span = { path = "../thrushc_span" }