[package]
name = "thrushc_entities"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ahash = "0.8.11"

thrushc_ast = { path = "../thrushc_ast" }
thrushc_span = { path = "../thrushc_span" }
thrushc_token = { path = "../thrushc_token" }
thrushc_typesystem = { path = "../thrushc_typesystem" }
thrushc_attributes = { path = "../thrushc_attributes" }