[package]
name = "thrushc_entrypoint"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

default-run = "thrushc_entrypoint"

[dependencies]
ahash = "0.8.11"
colored = "3.0.0"

thrushc_core = { path = "../thrushc_core"  }
thrushc_heap_allocator = { path = "../thrushc_heap_allocator" }
thrushc_options = { path = "../thrushc_options" }
thrushc_logging = { path = "../thrushc_logging"}
thrushc_parser = { path = "../thrushc_parser"}
thrushc_lexer = { path = "../thrushc_lexer" }
thrushc_ast = { path = "../thrushc_ast"}
thrushc_diagnostician = { path = "../thrushc_diagnostician"}
thrushc_typesystem = { path = "../thrushc_typesystem"}
thrushc_span = { path = "../thrushc_span" }
thrushc_errors = { path = "../thrushc_errors" }
thrushc_reader = { path = "../thrushc_reader" }
thrushc_constants = { path = "../thrushc_constants" }


