[package]
name = "thrushc_errors"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
colored = "3.0.0"
lazy_static = "1.5.0"
ahash = "0.8.12"

thrushc_span = { path = "../thrushc_span" }
thrushc_logging = { path = "../thrushc_logging" }