[package]
name = "thrushc_frontend_abort"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_errors = { path = "../thrushc_errors" }
thrushc_span = { path = "../thrushc_span" }
thrushc_token = { path = "../thrushc_token" }
thrushc_logging = { path = "../thrushc_logging" }