[package]
name = "thrushc_heap_allocator"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thrushc_logging = { path = "../thrushc_logging" }