[package]
name = "thrushc_lexer"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ahash = "0.8.11"
lazy_static = "1.5.0"
fastrand = "2.3.0"
colored = "3.0.0"
unicode_categories = "0.1.1"

thrushc_options = { path = "../thrushc_options" }
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_errors = { path = "../thrushc_errors" }
thrushc_span = { path = "../thrushc_span" }
thrushc_token = { path = "../thrushc_token" }
thrushc_logging = { path = "../thrushc_logging" }