[package]
name = "thrushc_llvm_attributes"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
inkwell = { workspace = true, optional = true }
clang = { workspace = true, optional = true }

thrushc_attributes = { path = "../thrushc_attributes" }
thrushc_span = { path = "../thrushc_span" }
thrushc_llvm_callconventions = { path = "../thrushc_llvm_callconventions" }

[features]
default = ["llvm_backend_static", "cbindgen_static"]

llvm_backend_dynamic = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-dynamic"]
llvm_backend_static  = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-static"]

cbindgen_static      = ["dep:clang", "clang/static"]
cbindgen_dynamic     = ["dep:clang"]
