[package]
name = "thrushc_llvm_builtins"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
thrushc_ast = { path = "../thrushc_ast" }
thrushc_typesystem = { path = "../thrushc_typesystem" }
thrushc_span = { path = "../thrushc_span" }