[package]
name = "thrushc_llvm_callconventions_checker"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]

thrushc_llvm_callconventions = { path = "../thrushc_llvm_callconventions" }
thrushc_llvm_attributes = { path = "../thrushc_llvm_attributes"  } 
thrushc_attributes = { path = "../thrushc_attributes" } 
thrushc_options = { path = "../thrushc_options" }
thrushc_logging = { path = "../thrushc_logging" }
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_span = { path = "../thrushc_span" }
thrushc_ast = { path = "../thrushc_ast" }
thrushc_errors = { path = "../thrushc_errors" }