[package]
name = "thrushc_llvm_codegen"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ahash = "0.8.11"
fastrand = "2.3.0"
libloading = "0.8.9"
uuid = { version = "1.19.0", features = ["v4"] }

inkwell = { workspace = true, optional = true }
clang = { workspace = true, optional = true }

thrushc_llvm_attributes = { path = "../thrushc_llvm_attributes" }
thrushc_llvm_builtins = { path = "../thrushc_llvm_builtins" }
thrushc_llvm_callconventions = { path = "../thrushc_llvm_callconventions" }
thrushc_attributes = { path = "../thrushc_attributes" }
thrushc_typesystem = { path = "../thrushc_typesystem" }
thrushc_mir = { path = "../thrushc_mir" }
thrushc_errors = { path = "../thrushc_errors" }
thrushc_ast = { path = "../thrushc_ast" }
thrushc_logging = { path = "../thrushc_logging" }
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_options = { path = "../thrushc_options" }
thrushc_entities = { path = "../thrushc_entities" }
thrushc_constants = { path = "../thrushc_constants" }
thrushc_token = { path = "../thrushc_token" }
thrushc_span = { path = "../thrushc_span" }

[features]
default = ["llvm_backend_static", "cbindgen_static"]

llvm_backend_dynamic = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-dynamic"]
llvm_backend_static  = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-static"]

cbindgen_static      = ["dep:clang", "clang/static"]
cbindgen_dynamic     = ["dep:clang"]
