[package]
name = "thrushc_modificators"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thrushc_mir = { path = "../thrushc_mir" }