[package]
name = "thrushc_options"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
libloading = "0.8.9"
uuid = { version = "1.19.0", features = ["v4"] }

inkwell = { workspace = true, optional = true }
clang = { workspace = true, optional = true }

thrushc_token = { path = "../thrushc_token" }
thrushc_logging = { path = "../thrushc_logging" }
thrushc_span = { path = "../thrushc_span" }
thrushc_ast = { path = "../thrushc_ast" }

[features]
default = ["llvm_backend_static", "cbindgen_static"]

llvm_backend_dynamic = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-dynamic"]
llvm_backend_static  = ["dep:inkwell", "inkwell/llvm17-0", "inkwell/llvm17-0-force-static"]

cbindgen_static      = ["dep:clang", "clang/static"]
cbindgen_dynamic     = ["dep:clang"]
