[package]
name = "thrushc_parser"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
ahash = "0.8.11"
either = "1.15.0"

thrushc_mir = { path = "../thrushc_mir" }
thrushc_frontend_abort = { path = "../thrushc_frontend_abort" }
thrushc_attributes = { path = "../thrushc_attributes" }
thrushc_ast = { path = "../thrushc_ast" }
thrushc_typesystem = { path = "../thrushc_typesystem" }
thrushc_options = { path = "../thrushc_options" }
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_errors = { path = "../thrushc_errors" }
thrushc_span = { path = "../thrushc_span" }
thrushc_token = { path = "../thrushc_token" }
thrushc_logging = { path = "../thrushc_logging" }