[package]
name = "thrushc_preprocessor_type_resolver"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thrushc_logging = { path = "../thrushc_logging"  }
thrushc_reader = { path = "../thrushc_reader" }
thrushc_constants = { path = "../thrushc_constants" }
thrushc_frontend_abort = { path = "../thrushc_frontend_abort" }
thrushc_errors = { path = "../thrushc_errors" }
thrushc_options = { path = "../thrushc_options" }
thrushc_diagnostician = { path = "../thrushc_diagnostician" }
thrushc_span = { path = "../thrushc_span" }
thrushc_attributes = { path = "../thrushc_attributes" }
thrushc_typesystem = { path = "../thrushc_typesystem" }
thrushc_ast = { path = "../thrushc_ast" }
thrushc_token = { path = "../thrushc_token" }
thrushc_token_type = { path = "../thrushc_token_type" }
thrushc_lexer = { path = "../thrushc_lexer" }
