[package]
name = "thrushc_token"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
thrushc_span = { path = "../thrushc_span" }
thrushc_typesystem = { path = "../thrushc_typesystem" }
thrushc_errors = { path = "../thrushc_errors" }