[package]
name = "thrushc_token_type"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arbitrary =  { version = "1.4.2", features = ["derive"], optional = true }

[features]
fuzz = ["dep:arbitrary"]